<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Failure Reporter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_str">Report failure</string>
    <string name="ongoing_str">Ongoing Reports</string>
    <string name="history_str">History</string>
    <string name="title_activity_add_task">Report failure</string>
    <string name="title_activity_ongoing">My Ongoing Reports</string>
    <string name="title_activity_history">My Past Reports</string>
    <string name="title_activity_edit_task">Report failure</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="current_location">Your Current Location</string>
    <string name="reminder">Reminder</string>
    <string name="title">Title</string>
    <string name="sure_to_delete">Delete report?</string>
    <string name="sure_to_clear_history">Sure to clear history?</string>
    <string name="past_or_delete">Move report to history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="lgt">Longitude</string>
    <string name="ltt">Latitude</string>
    <string name="location">Location</string>
    <string name="current_loc">Get current location</string>
    <string name="by_address">Get location by address</string>
    <string name="photos">Photos</string>
    <string name="y_move">Yes, move it</string>
    <string name="n_delete">No, delete it</string>
    <string name="new_report">New Report</string>
    <string name="clear_history">Clear history</string>
    <string name="start_date">Notification Date</string>
    <string name="end_date">Solution Date</string>
    <string name="done">Done</string>
    <string name="status">Status</string>
    <string name="sms">SMS</string>
    <string name="email">E-MAIL</string>
    <string name="sort">SORT BY</string>
    <string name="export">EXPORT</string>
    <string name="bluetooth">BLUETOOTH</string>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_parent">ParentActivity</string>

</resources>
