<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_delete_all"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/clear_history"
        android:showAsAction="ifRoom|withText"
        
        />
    
    <item
        android:id="@+id/menu_sort"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/sort_title"
                android:orderInCategory="10"
                android:showAsAction="always"
                android:title="@string/title"
                />
               <item
                android:id="@+id/sort_bdate"
                android:orderInCategory="10"
                android:showAsAction="always"
                android:title="@string/start_date"
                />
            <item
                android:id="@+id/sort_edate"
                android:orderInCategory="20"
                android:showAsAction="always"
                android:title="@string/end_date"/>
        </menu>
      </item>

</menu>
