<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
<TableLayout
    android:id="@+id/tableLayout_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="0" >

           <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/common_action_bar_splitter">
     
         <CheckBox
              android:id="@+id/e_done"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/done" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/e_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/e_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="" >
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/e_desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />
   </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/e_desc_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="" >

        </EditText>
    </TableRow>
    
    <TableRow
        android:id="@+id/newdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/e_bdate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
     
        <DatePicker
                android:id="@+id/e_begin_datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left" >
            </DatePicker>

    </TableRow>
    
        <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/e_edate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
     
        <DatePicker
                android:id="@+id/e_end_datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left" >
            </DatePicker>

    </TableRow>
    
      
      <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/e_loc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/location" />
    </TableRow>
    
        <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/adres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/e_loc_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
             >
        </EditText>
    </TableRow>
    
             <TableRow
            android:id="@+id/get_loc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/e_get_loc_b"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Get current location" />

                <Button
                    android:id="@+id/e_get_loc_bn"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Get location by name" />
            </LinearLayout>
        </TableRow>

<TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            android:id="@+id/e_long_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Longitude" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/e_long_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
             >
        </EditText>
        </TableRow>
        
<TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
                <TextView
            android:id="@+id/e_lat_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Latitude" />
     </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/e_lat_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
             >

         
        </EditText>
        </TableRow>
         <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/e_photos_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Photos"
                android:visibility="invisible"
                android:textSize="20sp" />
        </TableRow>
</TableLayout>
</ScrollView>